# cmake

./: CMakeLists.txt
src/: CMakeLists.txt  CMakeLists1.txt  main.c
